# SCADA_2

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  processing.cpp  processing.h  protocolclient.cpp  protocolclient.h  protocoldata.cpp  protocoldata.h  settings.h  settings.txt
lib60870-C/examples/: CMakeLists.txt
lib60870-C/examples/cs104_client/: simple_client.cpp
lib60870-C/examples/cs104_server/: simple_server.cpp
lib60870-C/examples/get_client/: CMakeLists.txt  simple_client.cpp
lib60870-C/examples/send_server/: CMakeLists.txt  simple_server.cpp
libiec61850/examples/: CMakeLists.txt  Makefile
libiec61850/examples/iec61850_client_example4/: Makefile  client_example4.c
libiec61850/examples/server_example_basic_io/: server_example_basic_io.c
opc_ua/: CMakeLists.txt  client.py  gen.txt  server.py
